--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,3 @@
-
 html,
 body {
   padding: 0;
@@ -12,7 +11,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
+    Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   overflow-x: hidden;
   overflow-y: scroll;
   height: 100vh;
@@ -56,11 +56,11 @@ img {
   background-position: center;
   background-repeat: no-repeat;
   z-index: -2;
-  transition: filter .5s,opacity 3s;
-  background-image:url("/images/bg_portfolio_setup.jpg");
+  transition: filter 0.5s, opacity 3s;
+  background-image: url('/images/bg_portfolio_setup.jpg');
 }
 #header-background:before {
-  background-image: radial-gradient(rgba(0,0,0,.0),rgba(0,0,0,0));
+  background-image: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
   content: '';
   display: block;
   position: absolute;
@@ -72,8 +72,10 @@ img {
 }
 #header-background:after {
   background: linear-gradient(
-180deg
-,rgba(0,0,0,.0) 0%,rgba(0,0,0,0) 100%);
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
   content: '';
   display: block;
   position: absolute;
@@ -83,13 +85,12 @@ img {
   height: 80vh;
   z-index: -1;
 }
-.overlay-white-text{
-  background: rgba(0,0,0,0.45);
+.overlay-white-text {
+  background: rgba(0, 0, 0, 0.45);
 }
 
-
 $theme-colors: (
-  "warning":    #fbb828,
+  'warning': #fbb828,
 );
 
-@import "bootstrap/scss/bootstrap.scss";
+@import 'bootstrap/scss/bootstrap.scss';
