--- a/styles/global.scss
+++ b/styles/global.scss
@@ -95,3 +95,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
 }
+
+.retro-btn-shadow {
+  box-shadow: rgb(183 183 183) 0px -6px 0px inset, #ecfdf5 0px -7px 0px 0px inset, #ecfdf5 0px 1px 0px 1px inset !important;
+}
