--- a/styles/global.scss
+++ b/styles/global.scss
@@ -91,11 +91,93 @@ body {
   background-image: url('/images/bg_portfolio_setup.jpg');
 }
 .bg-custom-gradient {
-  background-image: url('/images/gradient.svg');
+  background-image: url('/assets/general/gradient.svg');
   background-repeat: no-repeat;
   background-position: top center;
 }
 
 .retro-btn-shadow {
   box-shadow: rgb(183 183 183) 0px -6px 0px inset, #ecfdf5 0px -7px 0px 0px inset, #ecfdf5 0px 1px 0px 1px inset !important;
+}
+
+.floatnav {
+    //background: rgba(22, 22, 22, 0.85);
+    display: flex;
+    align-items: flex-end;
+    width: auto;
+    height: 70px;
+    padding-left: 10px;
+    padding-right: 10px;
+    position: fixed;
+    bottom: -8px;
+    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
+    backdrop-filter: blur(25px);
+    //border: 1px solid rgba(255, 255, 255, 0.2);
+    left: 50%;
+    border-radius: 20px;
+    opacity: 0;
+    z-index: 10;
+    transform: translate(-50%, -50%) translateY(64px);
+    animation: 500ms ease 200ms 1 normal forwards running k-lmTzNz;
+}
+@keyframes k-lmTzNz {
+ 0% {
+    opacity: 0;
+    transform: translate(-50%, -50%) translateY(64px);
+}
+100% {
+    opacity: 1;
+    transform: translate(-50%, -50%) translateY(0);
+}
+
+}
+
+.floatnav-content {
+    display: flex;
+    align-items: flex-end;
+    gap: 8px;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.floatnav-item {
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 48px;
+    height: 48px;
+    transform: none;
+    //background: hsl(0 0% 13.6%);
+    border-radius: 23%;
+    position: relative;
+    color: hsl(0 0% 49.4%);
+    cursor: pointer;
+    flex-shrink: 0;
+    //background-image: linear-gradient( 45deg, hsl(0 0% 11.0%), hsl(0 0% 13.6%), hsl(0 0% 11.0%), hsl(0 0% 13.6%) );
+    background-size: 200% 100%;
+}
+.floatnav-separator {
+    margin: 0px 4px;
+    border: 0px;
+    width: 1px;
+    height: 48px;
+    background: hsl(0 0% 15.8%);
+    flex-shrink: 0;
+}
+.floatnav-item svg{
+    width: 50%;
+    height: 50%;
+    transform-origin: unset !important;
+}
+ .floatnav-item img {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    transform-origin: unset !important;
+}
+.img-test{
+    border-radius: 9999px;
 }
