--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,16 +4,7 @@
 @import 'tailwindcss/utilities';
 
 .bg-custom-gradient {
-    background-image: url("../images/gradient.svg");
-    background-repeat: no-repeat;
-    background-position: top center;
-}
-
-
-.floatnav {
-    background: rgba(22, 22, 22, 0.1);
-    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
-    backdrop-filter: blur(25px);
-    border-radius: 20px;
-    z-index: 10;
+  background-image: url('../images/gradient.svg');
+  background-repeat: no-repeat;
+  background-position: top center;
 }
